--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,7 +1,6 @@
 <ul class="list-group">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-  <li class="list-group-item">A fourth item</li>
-  <li class="list-group-item">And a fifth one</li>
+  <li (click)="setCurrentCategory(item)" [class]="getCurrentCategoryClass(item)" *ngFor="let item of categories">
+    {{ item.categoryName }}
+  </li>
 </ul>
+<h5 *ngIf="currentCategory">{{currentCategory.categoryName}} seçtiniz</h5>
