--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,16 @@
 <div *ngIf="!dataLoaded" class="spinner-border text-primary" role="status">
   <span class="visually-hidden">Loading...</span>
 </div>
+
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Ürün Ara</label>
+  <input type="type" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="arama ifadesi giriniz">
+</div>
+
+<div *ngIf="filterText?.length > 2" class="alert alert-success">
+    {{filterText}} aradınız.
+</div>
+
 <table *ngIf="dataLoaded" class="table">
     <thead>
         <tr>
@@ -8,16 +18,18 @@
             <th>Ürün adı</th>
             <th>Kategori</th>
             <th>Fiyat</th>
+            <th>Kdv'li Fiyat</th>
             <th>Stok Adedi</th>
 
         </tr>
     </thead>
 
-    <tr *ngFor="let product of products">
+    <tr *ngFor="let product of products | filterPipe:filterText">
         <td> {{product.productId}}</td>
-        <td> {{product.productName}}</td>
+        <td> {{product.productName | uppercase }}</td>
         <td> {{product.categoryId}}</td>
-        <td> {{product.unitPrice}}</td>
+        <td> {{product.unitPrice | currency}}</td>
+        <td> {{product.unitPrice | vatAdded:10 | currency}}</td>
         <td> {{product.unitsInStock}}</td>
     </tr>
 </table>
