--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -7,7 +7,7 @@
   <input type="type" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="arama ifadesi giriniz">
 </div>
 
-<div *ngIf="filterText?.length > 2" class="alert alert-success">
+<div *ngIf="filterText" class="alert alert-success">
     {{filterText}} aradınız.
 </div>
 
@@ -20,16 +20,19 @@
             <th>Fiyat</th>
             <th>Kdv'li Fiyat</th>
             <th>Stok Adedi</th>
-
+            <th></th>
         </tr>
     </thead>
+    <tbody>
+        <tr *ngFor="let product of products | filterPipe:filterText">
+            <td> {{product.productId}}</td>
+            <td> {{product.productName | uppercase }}</td>
+            <td> {{product.categoryId}}</td>
+            <td> {{product.unitPrice | currency}}</td>
+            <td> {{product.unitPrice | vatAdded:10 | currency}}</td>
+            <td> {{product.unitsInStock}}</td>
+            <td><button (click)="addToCart(product)" class="btn btn-success" type="button">Sepete Ekle</button></td>
+        </tr>
+    </tbody>
 
-    <tr *ngFor="let product of products | filterPipe:filterText">
-        <td> {{product.productId}}</td>
-        <td> {{product.productName | uppercase }}</td>
-        <td> {{product.categoryId}}</td>
-        <td> {{product.unitPrice | currency}}</td>
-        <td> {{product.unitPrice | vatAdded:10 | currency}}</td>
-        <td> {{product.unitsInStock}}</td>
-    </tr>
 </table>
